<resources>
    <string name="app_name">Brian Strom</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more_games">more games</string>
    <string name="credit">Credit</string>
    <string name="notifications">&#160;&#160; Notifications</string>
    <string name="share_on">Share on:</string>
    <string name="highscore">Highscore</string>
    <string name="sound">&#160;&#160;&#160;Sound</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="let_s_start">Let\'s Start</string>
</resources>
