<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F2F31"
    android:fadeScrollbars="true"
    android:isScrollContainer="true"
    android:scrollbarStyle="insideInset"
    tools:context=".settings">

    <Button
        android:id="@+id/button"
        android:layout_width="202dp"
        android:layout_height="70dp"
        android:background="@drawable/mybtn"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/more_games"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="202dp"
        android:layout_height="66dp"
        android:background="@drawable/mybtn"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/credit"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="202dp"
        android:layout_height="66dp"
        android:background="@drawable/mybtn"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:radius="31dip"
        android:paddingBottom="20dp"
        android:text="@string/highscore"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Noti" />

    <Switch
        android:id="@+id/sound"
        android:layout_width="202dp"
        android:layout_height="66dp"
        android:background="@drawable/mybtn"
        android:text="@string/sound"
        android:textAllCaps="true"
        android:checked="false"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Noti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Settings_lbl" />


    <Switch
        android:id="@+id/Noti"
        android:layout_width="202dp"
        android:layout_height="66dp"
        android:background="@drawable/mybtn"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/notifications"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound" />

    <TextView
        android:id="@+id/Settings_lbl"
        android:layout_width="283dp"
        android:layout_height="66dp"
        android:layout_marginTop="43dp"
        android:drawingCacheQuality="high"
        android:paddingLeft="60dp"
        android:text="@string/settings"
        android:textSize="36sp"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FF9800"/>

</androidx.constraintlayout.widget.ConstraintLayout>